# smart-food-manager

./: .gitignore  README.md  gitignore.  pyproject.toml  requirements.txt
backend/: __init__.py
backend/api/: __init__.py
backend/api/dependencies/: __init__.py
backend/api/middleware/: __init__.py
backend/api/routes/: __init__.py
backend/config/: __init__.py
backend/core/: __init__.py
backend/ml/: setup_ml_dirs.sh
cpp/: CMakeLists.txt
cpp/include/smart_food/core/: ingredient.hpp  meal.hpp  recipe.hpp  storage.hpp
cpp/src/core/: meal.cpp  recipe.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/core/: ingredient.cpp  meal.cpp  test_meal.cpp
frontend/: __init__.py
frontend/controllers/: __init__.py
frontend/gui/: __init__.py
frontend/gui/dialogs/: __init__.py
frontend/gui/views/: {__init__.py}
frontend/gui/views/dashboard/: __init__.py
frontend/gui/views/meal_planning/: __init__.py
frontend/gui/views/settings/: __init__.py
frontend/gui/views/shopping/: __init__.py
frontend/gui/widgets/: __init__.py
frontend/gui/widgets/charts/: __init__.py
frontend/utils/: __init__.py
tests/: __init__.py
