[tool.poetry]
name = "smart-food-manager"
version = "0.1.0"
description = "Smart Family Food Management Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
pybind11 = "^2.11.1"
PyQt6 = "^6.6.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
alembic = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
